Refactored grammar and updated interpreter